@@ -1,3 +1,8 @@
+2007-10-23  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* library/ttk/combobox.tcl (ttk::combobox::PopdownWindow): redo wm
+	transient on each drop to handle reparent-able frames. [Bug 1818441]
+
 2007-10-23  Joe English  <jenglish@users.sourceforge.net>
 
 	* library/ttk/combobox.tcl: [namespace import ::ttk::scrollbar]
